src/objects/PPM_Project__c.object
<CustomObject>
    <description>Projects are a core object in this application.  Projects can be related work requests that describe the initial project approval.  Additional work requests can be used for change management.  Projects include team members, benefit definition, budget and cost line items, risks, status reports, and time.  Often, organizations will use activities or create a child object to track milestones/gates.</description>
    <fields>
        <fullName>Actual_Benefits__c</fullName>
        <label>Actual Benefits</label>
        <summarizedField>Benefit__c.Actual_Benefit_Amount__c</summarizedField>
        <summaryForeignKey>Benefit__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Cost_Timesheets__c</fullName>
        <label>Actual Cost</label>
        <summarizedField>Time_Record__c.Actual_Cost__c</summarizedField>
        <summaryForeignKey>Time_Record__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Costs__c</fullName>
        <inlineHelpText>Actual costs is a roll up summary of the cost items actual amount field that meet the following cost item status - Posted, Paid, On Hold, Received, Planned.</inlineHelpText>
        <label>Actual Costs</label>
        <summarizedField>Cost_Items__c.Actual_Costs__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Items__c.Status__c</field>
            <operation>equals</operation>
            <value>Posted, Paid, On Hold, Received, Planned</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Items__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <inlineHelpText>Actual hours is filtered on the time that has been submitted or approved.  Draft time records as well as rejected time records are not included in the roll up summary.</inlineHelpText>
        <label>Actual Hours</label>
        <summarizedField>Time_Record__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Record__c.Time_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Submitted</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Record__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alternatives_to_Project__c</fullName>
        <inlineHelpText>What is the cost of doing nothing?</inlineHelpText>
        <label>Alternatives to Project</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budgeted_Costs__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total budget for the project.</inlineHelpText>
        <label>Budgeted Costs</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Estimated hours for duration of the project.</inlineHelpText>
        <label>Budgeted Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Need_Definition__c</fullName>
        <inlineHelpText>Please describe project in terms of the business unit requesting work.</inlineHelpText>
        <label>Business Need Definition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Sponsor__c</fullName>
        <label>Business Unit Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Management_Process__c</fullName>
        <inlineHelpText>Please define the Change Management Process.</inlineHelpText>
        <label>Change Management Process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Reporting_Process__c</fullName>
        <inlineHelpText>Please Describe the Communication &amp; Reporting Process.</inlineHelpText>
        <label>Communication &amp; Reporting Process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Ops HV976</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Meter_Percent_Complete__c</fullName>
        <formula>IF(Budgeted_Costs__c = 0,0,(Actual_Costs__c / Budgeted_Costs__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Meter Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Meter__c</fullName>
        <description>This is based off of a custom formula field not on the page layout.</description>
        <formula>IMAGE( 
&quot;http://chart.apis.google.com/chart&quot; &amp; 
&quot;?chs=180x80&quot; &amp; 
&quot;&amp;cht=gom&quot; &amp; 
&quot;&amp;chd=t:&quot; &amp; TEXT(  Cost_Meter_Percent_Complete__c   ) &amp; 
&quot;&amp;chf=bg,s,0000FF00&quot; &amp; 
&quot;&amp;chl=&quot; &amp; TEXT(Cost_Meter_Percent_Complete__c) &amp; &quot;%&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost meter is defined as Actual Costs / Budgeted Costs.  This cost meter is an example of google charts integrated to Salesforce.com via a custom formula field.</inlineHelpText>
        <label>Cost Meter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_Business_Asset__c</fullName>
        <label>Delivered Business Asset</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Capital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_Meter_Percent_Complete__c</fullName>
        <formula>IF( Budgeted_Hours__c = 0, 0, (Actual_Hours__c / Budgeted_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Meter Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>IMAGE( 
&quot;http://chart.apis.google.com/chart&quot; &amp; 
&quot;?chs=180x80&quot; &amp; 
&quot;&amp;cht=gom&quot; &amp; 
&quot;&amp;chd=t:&quot; &amp; TEXT(  Hours_Meter_Percent_Complete__c ) &amp; 
&quot;&amp;chf=bg,s,0000FF00&quot; &amp; 
&quot;&amp;chl=&quot; &amp; TEXT(Hours_Meter_Percent_Complete__c  ) &amp; &quot;%&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost meter is defined as Actual hours / Budgeted hours.  This cost meter is an example of google charts integrated to Salesforce.com via a custom formula field.</inlineHelpText>
        <label>Hours Meter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Strategy__c</fullName>
        <inlineHelpText>Is this a &quot;do-it yourself&quot; project or do we need outside vendors/contractor assistance?  Are we forging new relationships and contracts?</inlineHelpText>
        <label>Implementation Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Requirements__c</fullName>
        <inlineHelpText>What are the high level infrastructure requirements involved?</inlineHelpText>
        <label>Infrastructure Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investment_Nature__c</fullName>
        <label>Investment Nature</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Constraints_Assumptions__c</fullName>
        <inlineHelpText>What are the assumptions in terms of budget, process and people?</inlineHelpText>
        <label>Key Constraints / Assumptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_Costs__c</fullName>
        <formula>IF( Budgeted_Costs__c = 0, 0, (Actual_Cost_Timesheets__c / Budgeted_Costs__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete (Costs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_Hours__c</fullName>
        <formula>IF( Budgeted_Hours__c = 0, 0, (Actual_Hours__c / Budgeted_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_Benefits__c</fullName>
        <label>Planned Benefits</label>
        <summarizedField>Benefit__c.Planned_Benefit_Amount__c</summarizedField>
        <summaryForeignKey>Benefit__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned_Costs__c</fullName>
        <inlineHelpText>Planned costs is a roll up summary of the cost items planned amount field that meet the following cost item status - Posted, Paid, On Hold, Received, Planned.</inlineHelpText>
        <label>Planned Cost</label>
        <summarizedField>Cost_Items__c.Estimated_Costs__c</summarizedField>
        <summaryFilterItems>
            <field>Cost_Items__c.Status__c</field>
            <operation>equals</operation>
            <value>Planned, Received, On Hold, Paid, Posted</value>
        </summaryFilterItems>
        <summaryForeignKey>Cost_Items__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned_Duration__c</fullName>
        <formula>(Planned_End_Date__c -  Planned_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in weeks = (Planned End Date - Planned Start Date) / 7</inlineHelpText>
        <label>Planned Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Portfolio__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Duration__c</fullName>
        <formula>(Project_End_Date__c - Project_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in weeks = (Project End Date - Project Start Date) / 7</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Goal__c</fullName>
        <label>Project Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <inlineHelpText>Note: Implementation Phase Includes user acceptance, training, and post production support.</inlineHelpText>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <inlineHelpText>Please describe the scope of the project.</inlineHelpText>
        <label>Project Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Success_Criteria__c</fullName>
        <inlineHelpText>Please define Project Success Criteria.</inlineHelpText>
        <label>Project Success Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Please select the region(s) that this project supports.</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Remaing_Costs__c</fullName>
        <formula>Budgeted_Costs__c - Actual_Cost_Timesheets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budget - Actual Costs</inlineHelpText>
        <label>Remaining (Costs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Hours__c</fullName>
        <formula>Budgeted_Hours__c - Actual_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_budget__c</fullName>
        <formula>Budgeted_Costs__c  - Actual_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Overall Budget  - budget line item actual cost items.</inlineHelpText>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <formula>IF( ISPICKVAL(Project_Phase__c, &apos;Draft&apos;),
 IF( Percent_Complete_Hours__c &lt; 0.05,
  IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&apos;, &apos;Green&apos;),
   IF( Percent_Complete_Hours__c &lt; 0.15,
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&apos;, &apos;Yellow&apos;),
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&apos;, &apos;Red&apos;)
   )
 ),

IF( ISPICKVAL(Project_Phase__c, &apos;Analyze&apos;),
 IF( Percent_Complete_Hours__c &lt; 0.25,
  IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&apos;, &apos;Green&apos;),
   IF( Percent_Complete_Hours__c &lt; 0.35,
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&apos;, &apos;Yellow&apos;),
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&apos;, &apos;Red&apos;)
   )
 ),
IF( ISPICKVAL(Project_Phase__c, &apos;Design&apos;),
 IF( Percent_Complete_Hours__c &lt; 0.5,
  IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&apos;, &apos;Green&apos;),   
   IF( Percent_Complete_Hours__c &lt; 0.60,
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&apos;, &apos;Yellow&apos;),
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&apos;, &apos;Red&apos;)
   )
 ),
IF( ISPICKVAL(Project_Phase__c, &apos;Build&apos;),
 IF( Percent_Complete_Hours__c &lt; 0.75,
  IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&apos;, &apos;Green&apos;),   
   IF( Percent_Complete_Hours__c &lt; 0.85,
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&apos;, &apos;Yellow&apos;),
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&apos;, &apos;Red&apos;)
   )
 ),
IF( ISPICKVAL(Project_Phase__c, &apos;Implementation&apos;),
 IF( Percent_Complete_Hours__c &lt; 1,
  IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&apos;, &apos;Green&apos;),   
   IF( Percent_Complete_Hours__c &lt; 1.1,
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&apos;, &apos;Yellow&apos;),
    IMAGE(&apos;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&apos;, &apos;Red&apos;)
   )
 ),
&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an example of a conditional, custom formula field that evaluates the Project Phase and the Percent Complete (hours).  Default Value for &quot;Draft - Phase Zero&quot; (Green 0 - .05%, Yellow .06 - .15, Red .16 and above).  For more definition, go into setup</inlineHelpText>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance_Duration__c</fullName>
        <formula>(Planned_Duration__c - Project_Duration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned - Actual (Duration)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Request</label>
        <referenceTo>Work_Request__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Product_Manager__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Phase__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>